--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+GameEngine2/Build/GameEngine2_Data/sharedassets1.assets.resS filter=lfs diff=lfs merge=lfs -text
